--- a/nginx/nginx-deployment.yaml
+++ b/nginx/nginx-deployment.yaml
@@ -1,50 +1,41 @@
-apiVersion: extensions/v1beta1
+---
 kind: Deployment
+apiVersion: extensions/v1beta1
 metadata:
-  annotations:
-    deployment.kubernetes.io/revision: "1"
-  generation: 3
+  name: nginx-controller
+  namespace: kube-system
   labels:
-    k8s-app: nginx
-  name: nginx
-  namespace: prod
+    k8s-app: nginx-ingress-lb
 spec:
-  progressDeadlineSeconds: 600
   replicas: 1
-  revisionHistoryLimit: 10
   selector:
     matchLabels:
-      k8s-app: nginx
-  strategy:
-    rollingUpdate:
-      maxSurge: 25%
-      maxUnavailable: 25%
-    type: RollingUpdate
+      k8s-app: nginx-ingress-lb
   template:
     metadata:
-      creationTimestamp: null
       labels:
-        k8s-app: nginx
-        name: nginx
+        k8s-app: nginx-ingress-lb
+        name: nginx-ingress-lb
     spec:
+      serviceAccountName: traefik-ingress-controller
+      terminationGracePeriodSeconds: 60
       containers:
       - image: nginx
-        imagePullPolicy: Always
-        name: nginx
+        name: nginx-ingress-lb
         ports:
-        - containerPort: 80
-          protocol: TCP
-        resources:
-          limits:
-            cpu: 500m
-            memory: 512Mi
-          requests:
-            cpu: 250m
-            memory: 256Mi
-        terminationMessagePath: /dev/termination-log
-        terminationMessagePolicy: File
-      dnsPolicy: ClusterFirst
-      restartPolicy: Always
-      schedulerName: default-scheduler
-      securityContext: {}
-      terminationGracePeriodSeconds: 30
+        - name: http
+          containerPort: 80
+---
+kind: Service
+apiVersion: v1
+metadata:
+  name: nginx-ingress-service
+  namespace: prod
+spec:
+  selector:
+    k8s-app: ginx-ingress-lb
+  ports:
+    - protocol: TCP
+      port: 80
+      name: web
+  type: LoadBalancer
