--- a/nginx/nginx-deployment.yaml
+++ b/nginx/nginx-deployment.yaml
@@ -33,7 +33,7 @@ metadata:
   namespace: prod
 spec:
   selector:
-    k8s-app: ginx-ingress-lb
+    k8s-app: nginx-ingress-lb
   ports:
     - protocol: TCP
       port: 80
