Ajustes do deployment, service e ingress do Nginx

--- a/nginx/nginx-deployment.yaml
+++ b/nginx/nginx-deployment.yaml
@@ -2,8 +2,8 @@
 kind: Deployment
 apiVersion: extensions/v1beta1
 metadata:
-  name: nginx-controller
-  namespace: kube-system
+  name:  nginx-ingress-lb
+  namespace: prod
   labels:
     k8s-app: nginx-ingress-lb
 spec:
@@ -27,13 +27,27 @@ spec:
 kind: Service
 apiVersion: v1
 metadata:
-  name: nginx-ingress-service
+  name: nginx-web
   namespace: prod
 spec:
   selector:
     k8s-app: nginx-ingress-lb
   ports:
-    - protocol: TCP
-      port: 80
-      name: web
-  type: LoadBalancer
+  - name: nginx-web-port
+    port: 80
+    targetPort: 80
+---
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: nginx-web-ui
+  namespace: prod
+spec:
+  rules:
+  - host: nginx.lab.local
+    http:
+      paths:
+      - path: /
+        backend:
+          serviceName: nginx-web
+          servicePort: nginx-web-port
